# onsetsds_tilde

./: .gitignore  CMakeLists.txt  README.md  onsetsds~-help.pd
.github/workflows/: c-build.yml
resources/: onsets.pd  onsetsds~-help.pd
src/: onsetsds~.c
